kubernetes/apps/immich/machine-learning/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: machine-learning
  namespace: immich
spec:
  ports:
    - port: 3003
  selector:
    app: machine-learning
